Bug 339554 at-poke gets a focus-event for a blank panel r=aaronleventhal sr=roc